Fix the bulk of SonarQube issues